<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.geominder.esiea.geonav.AjouterActivity"
    android:layout_marginLeft="-2dp"
    android:layout_marginRight="-2dp">

    <RelativeLayout
        android:id="@+id/bar_gerer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:background="@drawable/background_bartop"
        android:layout_marginLeft="-2dp"
        android:layout_marginRight="-2dp">

        <ImageButton
            android:id="@+id/boutonback1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:src="@drawable/left"
            android:contentDescription="@string/arrow"
            android:background="@color/BelizeHole"
            android:onClick="homeAction"/>

        <TextView
            android:id="@+id/gererTitre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ajouter"
            android:textColor="@color/Clouds"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_centerInParent="true"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/bar_gerer"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/Clouds">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0.1"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="@drawable/background_rv">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titre"
                android:layout_weight="0.5"
                android:textAlignment="center"
                android:textColor="@color/MidnightBlue"/>

            <EditText
                android:id="@+id/edit_titre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:hint="@string/titre"
                android:textColorHint="@color/Silver"
                android:inputType="textMultiLine"
                android:textAlignment="center"
                android:textColor="@color/BelizeHole"
                android:textStyle="italic"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0.1"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:orientation="horizontal"
            android:background="@drawable/background_rv"
            android:onClick="selectPlace">

            <TextView
                android:id="@+id/tv_lieu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lieu"
                android:textAlignment="center"
                android:textColor="@color/MidnightBlue" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0.1"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:background="@drawable/background_rv">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recurence"
                android:layout_weight="0.7"
                android:textAlignment="center"
                android:textColor="@color/MidnightBlue"/>

            <TextView
                android:id="@+id/tv_lundi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lundi"
                android:textColor="@color/Silver"
                android:layout_weight="0.1"
                android:onClick="lundiAction"/>

            <TextView
                android:id="@+id/tv_mardi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mardi"
                android:textColor="@color/Silver"
                android:layout_weight="0.1"
                android:onClick="mardiAction"/>

            <TextView
                android:id="@+id/tv_mercredi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mercredi"
                android:textColor="@color/Silver"
                android:layout_weight="0.1"
                android:onClick="mercrediAction"/>

            <TextView
                android:id="@+id/tv_jeudi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/jeudi"
                android:textColor="@color/Silver"
                android:layout_weight="0.1"
                android:onClick="jeudiAction"/>

            <TextView
                android:id="@+id/tv_vendredi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vendredi"
                android:textColor="@color/Silver"
                android:layout_weight="0.1"
                android:onClick="vendrediAction"/>

            <TextView
                android:id="@+id/tv_samedi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/samedi"
                android:textColor="@color/Silver"
                android:layout_weight="0.1"
                android:onClick="samediAction"/>

            <TextView
                android:id="@+id/tv_dimanche"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dimanche"
                android:textColor="@color/Silver"
                android:layout_weight="0.1"
                android:onClick="dimancheAction"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_weight="0.1"
            android:gravity="center"
            android:layout_marginTop="2dp"
            android:background="@drawable/background_rv">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/de"
                android:textAlignment="center"
                android:layout_weight="0.2"
                android:textColor="@color/MidnightBlue"/>

            <TextView
                android:id="@+id/edit_depart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:hint="@string/timedef"
                android:textAlignment="center"
                android:textStyle="italic"
                android:textColorHint="@color/Silver"
                android:onClick="showTimeDepartAction"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a"
                android:textAlignment="center"
                android:layout_weight="0.2"
                android:textColor="@color/MidnightBlue"/>

            <TextView
                android:id="@+id/edit_fin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:hint="@string/timedef"
                android:textColorHint="@color/Silver"
                android:textAlignment="center"
                android:textStyle="italic"
                android:onClick="showTimeFinAction"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-3dp"
            android:layout_marginRight="-3dp"
            android:text="@string/enregistrer"
            android:textColor="@color/Clouds"
            android:background="@drawable/background_bouton_2"
            android:onClick="enregistrerAction"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-3dp"
            android:layout_marginRight="-3dp"
            android:layout_marginTop="2dp"
            android:text="@string/annuler"
            android:textColor="@color/Clouds"
            android:background="@drawable/background_bouton_delete"
            android:onClick="annulerAction"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"/>

    </LinearLayout>

</RelativeLayout>
